crates/parser/tests/snapshots/inline/ok/return_stmt.snap
---
source: crates/parser/tests/inline_ok.rs
---
# return_stmt

## Input

```
return
return 1
```

## CST

```
SOURCE_FILE@0..15
  RETURN_STMT@0..6
    RETURN_KW@0..6 "return"
  WHITESPACE@6..7 "\n"
  RETURN_STMT@7..15
    RETURN_KW@7..13 "return"
    WHITESPACE@13..14 " "
    LITERAL@14..15
      INT@14..15 "1"
```

## AST

```
SourceFile {
    shebang: none,
    statements: [
        ReturnStmt {
            return_token: RETURN_KW@0..6 "return",
            expr: none,
        },
        ReturnStmt {
            return_token: RETURN_KW@7..13 "return",
            expr: Literal {
                token: INT@14..15 "1",
            },
        },
    ],
}
```

vim:ft=markdown
