crates/parser/tests/snapshots/inline/ok/var_stmt.snap
---
source: crates/parser/tests/inline_ok.rs
---
# var_stmt

## Input

```
var x = 1
```

## CST

```
SOURCE_FILE@0..9
  VAR_STMT@0..9
    VAR_KW@0..3 "var"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "x"
    WHITESPACE@5..6 " "
    EQ@6..7 "="
    WHITESPACE@7..8 " "
    LITERAL@8..9
      INT@8..9 "1"
```

## AST

```
SourceFile {
    shebang: none,
    statements: [
        VarStmt {
            var_token: VAR_KW@0..3 "var",
            pat: Name {
                ident: IDENT@4..5 "x",
            },
            eq_token: EQ@6..7 "=",
            expr: Literal {
                token: INT@8..9 "1",
            },
        },
    ],
}
```

vim:ft=markdown
